--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         <button id="login-btn" class="border-2 lg:px-8 sm:px-4 lg:py-2 sm:py-1 mt-4 rounded mb-4 bg-lime-200 font-semibold">Login</button>
     </div>
 
-    <script src="js/login.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
